correct spacing of AddLesson comp elements during screen resize

--- a/src/css/Schedule.css
+++ b/src/css/Schedule.css
@@ -59,6 +59,15 @@
   box-shadow: 4px 4px 16px rgba(0,0,0,0.2);
 }
 
+.blue-clr {
+  background-color: blue;
+  position: relative;
+}
+
+.btn-ovr {
+  position: absolute;
+  right: 3px;
+}
 @media only screen and (min-width: 768px) {
   #sphere {
   width: 30px;
